# ChangeLog for dev-java/swt
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/swt/ChangeLog,v 1.89 2008/05/20 21:15:15 betelgeuse Exp $

  20 May 2008; Petteri Räty <betelgeuse@gentoo.org> swt-3.4_pre6-r1.ebuild:
  Add ppc64 support. Fixes bug #222971. Thanks to Andrew John Hughes
  <gnu_andrew@member.fsf.org>.

  11 Apr 2008; Petteri Räty <betelgeuse@gentoo.org> swt-3.4_pre6-r1.ebuild:
  Use a blocker instead of dying in pkg_setup.

  05 Apr 2008; Vlastimil Babka <caster@gentoo.org> ChangeLog:
  Correct bug numbers in previous log.

*swt-3.4_pre6-r1 (03 Apr 2008)

  03 Apr 2008; Vlastimil Babka <caster@gentoo.org> -swt-3.4_pre6.ebuild,
  +swt-3.4_pre6-r1.ebuild:
  Revbump to change slot to 3.4 so that eclipse-3.3 still works, bug
  #216195 and #214012 comment 3. Swt 3.4_pre6 in slot 3 has to be downgraded
  or uninstalled first. Add x11-proto/inputproto to DEPEND, bug #215998.

  03 Apr 2008; Vlastimil Babka <caster@gentoo.org> swt-3.4_pre6.ebuild:
  Add a pkg_postinst elog about possibility of having to run eclipse-3.3
  -clean after swt upgrade.

*swt-3.4_pre6 (02 Apr 2008)

  02 Apr 2008; Vlastimil Babka <caster@gentoo.org> +files/swt-3.4-manifest,
  +swt-3.4_pre6.ebuild:
  Version bump, bug #214012.

  19 Mar 2008; Vlastimil Babka <caster@gentoo.org> -swt-3.3.ebuild,
  swt-3.3.1.1.ebuild:
  Update mozilla packages deps wrt xulrunner slotting, using EAPI=1 slot dep
  for xulrunner:1.8. Remove old version.

  11 Mar 2008; Kenneth Prugh <ken69267@gentoo.org> swt-3.3.1.1.ebuild:
  amd64 stable, bug #212660

  08 Mar 2008; Markus Meier <maekke@gentoo.org> swt-3.3.1.1.ebuild:
  x86 stable, bug #212660

  08 Mar 2008; nixnut <nixnut@gentoo.org> swt-3.3.1.1.ebuild:
  Stable on ppc wrt bug 212660

*swt-3.3.1.1 (15 Jan 2008)

  15 Jan 2008; Jean-Noël Rivasseau <elvanor@gentoo.org>
  +files/swt-3.3-manifest, +swt-3.3.1.1.ebuild:
  OSGi compliant version, bump to 3.3.1.1
